#16420 closed bug (fixed)
"HaikuDepot -v trace" crashes
Reported by: | humdinger | Owned by: | apl-haiku |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta3 |
Component: | Applications/HaikuDepot | Version: | R1/beta2 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is Beta2+116, 32bit
Same with verbosity level "debug". "info" works. No difference after removing ~/config/cache/HaikuDepot.
Full debug report attached.
thread 4238: ServerRepositoryDataUpdateProce state: Exception (Segment violation) Frame IP Function Name ----------------------------------------------- 0x7026fdb0 0x1cd6b6d DepotMatchingRepositoryListener::MapDepot(DepotInfo&, void*) + 0xd5 Disassembly: DepotMatchingRepositoryListener::MapDepot(DepotInfo&, void*):
The last lines in Terminal are:
[Coordinator] will coordinate nodes [Coordinator] process [LocalRepositoryUpdateProcess] running or complete [Coordinator] process [LocalPkgDataLoadProcess] running or complete [Coordinator] process [ServerIconExportUpdateProcess] running or complete [Coordinator] process [ServerRepositoryDataUpdateProcess] running or complete [Coordinator] process [ServerReferenceDataUpdateProcess] running or complete [Coordinator] all predecessors not complete -> [ServerPkgDataUpdateProcess<Haiku>] not started [Coordinator] all predecessors not complete -> [ServerPkgDataUpdateProcess<HaikuPorts>] not started url->file <ServerRepositoryDataUpdateProcess>; Connection opened, sending request. url->file <ServerRepositoryDataUpdateProcess>; GET /__repository/all-en.json.gz HTTP/1.1 url->file <ServerRepositoryDataUpdateProcess>; Host: depot.haiku-os.org url->file <ServerRepositoryDataUpdateProcess>; Accept: */* url->file <ServerRepositoryDataUpdateProcess>; Accept-Encoding: gzip url->file <ServerRepositoryDataUpdateProcess>; Connection: close url->file <ServerRepositoryDataUpdateProcess>; User-Agent: HaikuDepot/0.0.3 url->file <ServerRepositoryDataUpdateProcess>; If-Modified-Since: Thu, 09 Jul 2020 10:01:39 GMT url->file <ServerRepositoryDataUpdateProcess>; Request sent. url->file <ServerRepositoryDataUpdateProcess>; Status line received: Code 304 (Not Modified) url->file <ServerRepositoryDataUpdateProcess>; Date: Sun, 19 Jul 2020 07:00:44 GMT url->file <ServerRepositoryDataUpdateProcess>; Server: Jetty(9.4.27.v20200227) url->file <ServerRepositoryDataUpdateProcess>; Connection: close received http status 304 --> will not store download to file url->file <ServerRepositoryDataUpdateProcess>; 3 headers and 0 bytes of data remaining [ServerRepositoryDataUpdateProcess] remote data has not changed since [Thu, 09 Jul 2020 10:01:39 GMT] [ServerRepositoryDataUpdateProcess] did fetch data [ServerRepositoryDataUpdateProcess] will process data derived system default language [en] set preferred language [en] Kill Thread
Dario on IRC has no issues running nightly hrev54418, 32 bit.
Attachments (1)
Change History (3)
by , 5 years ago
Attachment: | HaikuDepot-4219-debug-19-07-2020-06-50-11.report added |
---|
comment:1 by , 5 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
This problem was caused by an unforeseen side-effect of changing the data coming from HDS into HaikuDepot. It is solved now by removing the use (only in logging) of the disused attribute.
comment:2 by , 4 years ago
Milestone: | Unscheduled → R1/beta3 |
---|
Assign fix to milestone:R1/beta3, as it looks like this fix will be part of that release.
As we started with the previous beta, we would like to use the Milestone field for fixed tickets to log from which release the improvement will be out. Therefore it is very much appreciated to assign the milestone when closing a ticket as fixed
.
debug report