HaikuDepot: Fix Reference to NULL Ptr

Fixes a bug in R1B2 branch in relation to data
from HDS.

Fixes #16420

Change-Id: I8061b9ffd20962c8f56e11c72e8b08b58c9cb2e7
Reviewed-on: https://review.haiku-os.org/c/haiku/+/3042
Reviewed-by: Adrien Destugues <pulkomandy@gmail.com>